commit of master

--- a/MVC5Beginners/Web.config
+++ b/MVC5Beginners/Web.config
@@ -48,9 +48,19 @@
   <system.webServer>
     <validation validateIntegratedModeConfiguration="false" />
     <modules>
+      <remove name="WebDAVModule"/>
       <remove name="ApplicationInsightsWebTracking" />
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" preCondition="managedHandler" />
     </modules>
+    <handlers>
+      <add name="SimpleHandlerFactory-Integrated-WithPutDelete"
+          path="*.ashx"
+          verb="GET,HEAD,POST,DEBUG,PUT,DELETE"
+          type="System.Web.UI.SimpleHandlerFactory"
+          resourceType="Unspecified"
+          requireAccess="Script"
+          preCondition="integratedMode" />
+    </handlers>
   </system.webServer>
   <system.codedom>
     <compilers>
